Create master branch via GitHub

--- a/index.html
+++ b/index.html
@@ -44,6 +44,15 @@
 <p>Code written by Bill Brubaker (<a href="https://github.com/noncreature0714" class="user-mention">@noncreature0714</a>). Designed by Bill Brubaker, Meason Wiley, and Stephen Byrne(<a href="https://github.com/sbyrne1" class="user-mention">@sbyrne1</a>). </p>
 
 <h3>
+<a id="the-story-so-far" class="anchor" href="#the-story-so-far" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>The Story So Far</h3>
+
+<p>After a binge session of DareDevil on Netflix, Bill thought it would be cool to make something which empowered persons with sight impairment. Meason and Stephen immediately recognized it as a good idea, and helped the idea come to fruition. </p>
+
+<p>The team didn't have much to start with - just a couple of ultrasonic sensors, an Arduino Uno, and a Raspberry Pi. But it worked! <img src="http://i.imgur.com/t4JFpQL.jpg" alt="A sensor in early prototype stage, with just an LED as feedback."></p>
+
+<p>A haptic sensor has since been added, <img src="http://i.imgur.com/CuMiFY1.jpg" alt="which provides vibrational feedback">, and the first design iteration of the wrist housing is being fabricated.</p>
+
+<h3>
 <a id="support-or-contact" class="anchor" href="#support-or-contact" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>Support or Contact</h3>
 
 <p>Having trouble with your Wrist Devil project or code? Check out our <a href="http://researchguides.austincc.edu/makerspace">official website</a> or contact the <a href="jwiley@austincc.edu">Batlab Coordinator</a> and we’ll help you sort it out.</p>
