Create master branch via GitHub

--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
 
 <p>The team didn't have much to start with - just a couple of ultrasonic sensors, an Arduino Uno, and a Raspberry Pi. But it worked! <img src="http://i.imgur.com/t4JFpQL.jpg" alt="A sensor in early prototype stage, with just an LED as feedback."></p>
 
-<p>A haptic sensor has since been added, <img src="http://i.imgur.com/CuMiFY1.jpg" alt="which provides vibrational feedback">, and the first design iteration of the wrist housing is being fabricated.</p>
+<p>A haptic sensor has since been added, <img src="http://i.imgur.com/CuMiFY1.jpg" alt="Pictured is the WristDevil with it's new haptic motor attached.">, and the first design iteration of the wrist housing is being fabricated.</p>
 
 <h3>
 <a id="support-or-contact" class="anchor" href="#support-or-contact" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>Support or Contact</h3>
